--- a/styles/style.scss
+++ b/styles/style.scss
@@ -72,7 +72,8 @@ $c-primary: #2c2c2c;
     }
   }
   .photography-site,
-  .travelly {
+  .travelly,
+  .omnifood {
     flex: 1 1 50rem;
     img {
       width: 100%;
